--- a/site/index.html
+++ b/site/index.html
@@ -64,12 +64,14 @@
     }
 
     const roll_accuracy = (event) => {
-      s.Gun_Accuracy_Mod = get_stat_total(`Accuracy_gun${event.target.dataset.gun}`)
+      s.Gun_Number = parseInt(event.target.dataset.gun, 10)
+      s.Gun_Accuracy_Mod = get_stat_total(`Accuracy_gun${s.Gun_Number}`)
       s.Base_Accuracy = get_stat_total('Accuracy')
-      s.Toggled_Accuracy = get_toggle_total(`Accuracy_gun${event.target.dataset.gun}_toggle`)
+      s.Toggled_Accuracy = get_toggle_total(`Accuracy_gun${s.Gun_Number}_toggle`)
       s.Accuracy_Adjustment = s.Gun_Accuracy_Mod + s.Base_Accuracy + s.Toggled_Accuracy
       s.Roll_Natural = roll(20)
       s.Roll_Total = s.Roll_Natural + s.Accuracy_Adjustment
+
       updateState()
     }
 
@@ -123,18 +125,30 @@
   <div>Name: Crappy Sniper</div>
   <div>Range: 8</div>
   
-  <div>Accuracy <input type="text" class="Accuracy_gun1" value="2" size="2"
+  <div>Accuracy <input type="text" class="Accuracy_gun0" value="2" size="2"
       disabled /></div>
   
-  <div>Crit_Damage <input type="text" class="Crit_Damage_gun1" value="2" size="2"
+  <div>Crit_Damage <input type="text" class="Crit_Damage_gun0" value="2" size="2"
       disabled /></div>
   
 
   
-  Accuracy +3 if Range 3+ <input type="checkbox" class="Accuracy_gun1_toggle" data-mod="3"
+  Accuracy +3 if Range 3+ <input type="checkbox" class="Accuracy_gun0_toggle" data-mod="3"
     checked>
   
-  <div><button class="accuracy_roller" data-gun="1">Roll Accuracy</button></div>
+
+  <div>Hits</div>
+  
+  <div>At 8 add 1</div>
+  
+
+  <div>Crits</div>
+  
+  <div>At 16 add 1</div>
+  
+
+
+  <div><button class="accuracy_roller" data-gun="0">Roll Accuracy</button></div>
   
 
   <h2>Core</h2>
