Starting to put in checks

--- a/site/index.html
+++ b/site/index.html
@@ -61,6 +61,47 @@
         </tr>
       </table>
     </div>
+
+    <h2>Checks</h2>
+    <div class="cards1">
+      <table>
+        <tr>
+          <td>Interact:</td>
+          <td id="Interact_Checks"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Talk:</td>
+          <td id="Talk_Checks"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Insight:</td>
+          <td id="Insight_Checks"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Sneak:</td>
+          <td id="Sneak_Checks"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Search:</td>
+          <td id="Search_Checks"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>Traverse:</td>
+          <td id="Traverse_Checks"></td>
+        </tr>
+      </table>
+    </div>
+
     <h2>Range Attack</h2>
     <div class="cards1">
       <table>
