Add initial insight check

--- a/site/index.html
+++ b/site/index.html
@@ -62,11 +62,11 @@
       </table>
     </div>
 
-    <h2>Checks</h2>
+    <h2>Checks - Natural: <span id="Checks_Natural">0</span> - Total: <span id="Checks_Total">0</span></h2>
     <div class="cards1">
       <table>
         <tr>
-          <td>Insight:</td>
+          <td><button class="check_roller" data-type="Insight">Insight:</button></td>
           <td id="Insight_Checks"></td>
         </tr>
       </table>
