Added general rolls

--- a/site/index.html
+++ b/site/index.html
@@ -72,46 +72,98 @@
       </table>
       <table>
         <tr>
-          <td>Interact:</td>
+          <td><button class="check_roller" data-type="Interact">Interact:</button></td>
           <td id="Interact_Checks"></td>
         </tr>
       </table>
       <table>
         <tr>
-          <td>Search:</td>
+          <td><button class="check_roller" data-type="Search">Search:</button></td>
           <td id="Search_Checks"></td>
         </tr>
         <tr>
-          <td>Loot:</td>
+          <td><button class="check_roller" data-type="Loot_Search">Loot:</button></td>
           <td id="Loot_Search_Checks"></td>
         </tr>
       </table>
       <table>
         <tr>
-          <td>Sneak:</td>
+          <td><button class="check_roller" data-type="Sneak">Sneak:</button></td>
           <td id="Sneak_Checks"></td>
         </tr>
         <tr>
-          <td>Guild:</td>
+          <td><button class="check_roller" data-type="Guild_Sneak">Guild:</button></td>
           <td id="Guild_Sneak_Checks"></td>
         </tr>
       </table>
       <table>
         <tr>
-          <td>Talk:</td>
+          <td><button class="check_roller" data-type="Talk">Talk:</button></td>
           <td id="Talk_Checks"></td>
         </tr>
       </table>
       <table>
         <tr>
-          <td>Traverse:</td>
+          <td><button class="check_roller" data-type="Traverse">Traverse:</button></td>
           <td id="Traverse_Checks"></td>
         </tr>
       </table>
     </div>
 
-    <h2>Range Attack</h2>
+
+    <h2>General Rolls</h2>
     <div class="cards1">
+
+      <table>
+        <tr>
+          <td><button class="general_roller" data-type="4">1d4:</button></td>
+          <td id="Roll_1d4"></td>
+        </tr>
+      </table>
+
+      <table>
+        <tr>
+          <td><button class="general_roller" data-type="6">1d6:</button></td>
+          <td id="Roll_1d6"></td>
+        </tr>
+      </table>
+
+      <table>
+        <tr>
+          <td><button class="general_roller" data-type="8">1d8:</button></td>
+          <td id="Roll_1d8"></td>
+        </tr>
+      </table>
+
+      <table>
+        <tr>
+          <td><button class="general_roller" data-type="10">1d10:</button></td>
+          <td id="Roll_1d10"></td>
+        </tr>
+      </table>
+
+      <table>
+        <tr>
+          <td><button class="general_roller" data-type="12">1d12:</button></td>
+          <td id="Roll_1d12"></td>
+        </tr>
+      </table>
+
+      <table>
+        <tr>
+          <td><button class="general_roller" data-type="20">1d20:</button></td>
+          <td id="Roll_1d20"></td>
+        </tr>
+      </table>
+
+    </div>
+
+
+
+    <h2>Range Attack - Total Damage:
+      <span id="Total_Damage">0</span>
+    </h2>
+    <div class="cards2">
       <table>
         <tr>
           <td>Natural:</td>
@@ -152,12 +204,6 @@
         <tr>
           <td>Bonuses:</td>
           <td id="Damage_Bonuses">-</td>
-        </tr>
-      </table>
-      <table>
-        <tr>
-          <td>Total Damage: </td>
-          <td id="Total_Damage">-</td>
         </tr>
       </table>
     </div>
