--- a/site/index.html
+++ b/site/index.html
@@ -56,11 +56,38 @@
       <table>
         <tr>
           <td>BA Rank:</td>
-          <td>1</td>
+          <td class="BA_Rank">1</td>
         </tr>
         <tr>
           <td>BA Tokens:</td>
           <td>0</td>
+        </tr>
+      </table>
+    </div>
+
+    <h2>Initiative<br />
+      <div class="h2small">Natural: <span id="Initiative_Natural">0</span> - Total: <span id="Initiative_Total">0</span>
+      </div>
+    </h2>
+    <div class="cards1">
+      <table>
+        <tr>
+          <td>Speed Mod:</td>
+          <td id="Initiative_Speed_Mod"></td>
+        </tr>
+        <tr>
+          <td>Misc Mod:</td>
+          <td id="Initiative_Mod"></td>
+        </tr>
+      </table>
+      <table>
+        <tr>
+          <td>BA Rank:</td>
+          <td id="Initiative_BA_Rank">1</td>
+        </tr>
+        <tr>
+          <td>1d20</td>
+          <td><button class="initiative_roller">Roll</button></td>
         </tr>
       </table>
     </div>
@@ -186,27 +213,27 @@
           <td id="Accuracy_Adjustment">-</td>
         </tr>
         <tr>
-          <td>Calculated: </td>
+          <td>Calculated:</td>
           <td id="Roll_Total">-</td>
         </tr>
       </table>
       <table>
         <tr>
-          <td>Hits: </td>
+          <td>Hits:</td>
           <td id="Hits">-</td>
         </tr>
         <tr>
-          <td>Rolls:</td>
+          <td>Roll:</td>
           <td id="Natural_Hit_Rolls">-</td>
         </tr>
       </table>
       <table>
         <tr>
-          <td>Crits: </td>
+          <td>Crits:</td>
           <td id="Crits">-</td>
         </tr>
         <tr>
-          <td>Rolls:</td>
+          <td>Roll:</td>
           <td id="Natural_Crit_Rolls">-</td>
         </tr>
       </table>
