--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <title>Rodger Hammerstien Character Sheet</title>
@@ -14,6 +14,425 @@
       <br />
       <span class="h2small" x-html="'Level ' + $store.d.level"></span>
     </h1>
+
+    <div class="cards1">
+      <table>
+        <tbody>
+          <tr>
+            <td>Health:</td>
+            <td x-html="$store.d.health.current + `/` + $store.d.health.max"></td>
+          </tr>
+          <tr>
+            <td>Regen:</td>
+            <td x-text="$store.d.health.regen"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td>Shields:</td>
+            <td x-html="$store.d.shields.current + `/` + $store.d.shields.max"></td>
+          </tr>
+          <tr>
+            <td>Regen:</td>
+            <td x-html="$store.d.shields.regen"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td>Movement:</td>
+            <td x-text="$store.d.movement"></td>
+          </tr>
+          <tr>
+            <td>Gold:</td>
+            <td x-text="$store.d.gold"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td>BA Rank:</td>
+            <td x-text="$store.d.ba_rank"></td>
+          </tr>
+          <tr>
+            <td>BA Tokens:</td>
+            <td x-text="$store.d.ba_tokens"></td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+    <!--
+
+
+
+
+    </div>
+
+    <h2>Initiative<br>
+      <div class="h2small">Natural: <span id="Initiative_Natural">0</span> - Total: <span id="Initiative_Total">0</span>
+      </div>
+    </h2>
+    <div class="cards1">
+      <table>
+        <tbody>
+          <tr>
+            <td>Speed Mod:</td>
+            <td id="Initiative_Speed_Mod" class="plus">0</td>
+          </tr>
+          <tr>
+            <td>Misc Mod:</td>
+            <td id="Initiative_Mod" class="plus">0</td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td>BA Rank:</td>
+            <td id="Initiative_BA_Rank" class="plus">1</td>
+          </tr>
+          <tr>
+            <td>1d20</td>
+            <td><button class="initiative_roller">Roll</button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <h2>Skill Checks<br>
+      <div class="h2small">Natural: <span id="Checks_Natural">0</span> - Total: <span id="Checks_Total">0</span>
+      </div>
+    </h2>
+
+
+    <div class="cards1">
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="check_roller" data-type="Insight">Insight:</button></td>
+            <td id="Insight_Checks">1</td>
+          </tr>
+          <tr>
+            <td><button class="check_roller" data-type="Interact">Interact:</button></td>
+            <td id="Interact_Checks">3</td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="check_roller" data-type="Search">Search:</button></td>
+            <td id="Search_Checks">2</td>
+          </tr>
+          <tr>
+            <td><button class="check_roller" data-type="Loot_Search">Loot:</button></td>
+            <td id="Loot_Search_Checks">7</td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="check_roller" data-type="Sneak">Sneak:</button></td>
+            <td id="Sneak_Checks">1</td>
+          </tr>
+          <tr>
+            <td><button class="check_roller" data-type="Guild_Sneak">Guild:</button></td>
+            <td id="Guild_Sneak_Checks">6</td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="check_roller" data-type="Talk">Talk:</button></td>
+            <td id="Talk_Checks">0</td>
+          </tr>
+          <tr>
+            <td><button class="check_roller" data-type="Traverse">Traverse:</button></td>
+            <td id="Traverse_Checks">0</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <h2>General Rolls<br>
+      <div class="h2small">
+        Natural:
+        <span id="General_Roll">0</span>
+      </div>
+    </h2>
+
+    <div class="cards1">
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="general_roller" data-type="4">1d4</button></td>
+            <td id="Roll_1d4"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="general_roller" data-type="6">1d6</button></td>
+            <td id="Roll_1d6"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="general_roller" data-type="8">1d8</button></td>
+            <td id="Roll_1d8"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="general_roller" data-type="10">1d10</button></td>
+            <td id="Roll_1d10"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="general_roller" data-type="12">1d12</button></td>
+            <td id="Roll_1d12"></td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table>
+        <tbody>
+          <tr>
+            <td><button class="general_roller" data-type="20">1d20</button></td>
+            <td id="Roll_1d20"></td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
+    <h2>Range Attack<br>
+      <div class="h2small">
+        Damage:
+        <span id="Total_Damage">0</span>
+      </div>
+    </h2>
+
+    <div class="cards2">
+      <table>
+        <tbody>
+          <tr>
+            <td>Natural:</td>
+            <td id="Roll_Natural">0</td>
+          </tr>
+          <tr>
+            <td>Modifier:</td>
+            <td id="Accuracy_Adjustment" class="plus">0</td>
+          </tr>
+          <tr>
+            <td>Calculated:</td>
+            <td id="Roll_Total">0</td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td>Hits:</td>
+            <td id="Hits">0</td>
+          </tr>
+          <tr>
+            <td>Roll:</td>
+            <td><strong id="Natural_Hit_Rolls">0</strong></td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td>Crits:</td>
+            <td id="Crits">0</td>
+          </tr>
+          <tr>
+            <td>Roll:</td>
+            <td><strong id="Natural_Crit_Rolls">0</strong></td>
+          </tr>
+        </tbody>
+      </table>
+      <table>
+        <tbody>
+          <tr>
+            <td>FavGun DMG:</td>
+            <td><strong id="Favored_Gun_Damage_Mod" class="plus">0</strong></td>
+          </tr>
+          <tr>
+            <td>Bonuses:</td>
+            <td><strong id="Damage_Bonuses" class="plus">0</strong></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <h2>Guns!</h2>
+    <div class="cards3">
+      <table class="gun_details">
+        <tbody>
+          <tr>
+            <td><strong>Crappy Sniper</strong></td>
+            <td>
+              <button class="accuracy_roller" data-gun="0">Roll</button>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">From Black Powder</td>
+          </tr>
+          <tr>
+            <td>Type:</td>
+            <td id="Gun_Type_gun0">Sniper</td>
+          </tr>
+          <tr>
+            <td>Favored:</td>
+            <td id="Is_Favored_Gun_Type__gun0">yes</td>
+          </tr>
+          <tr>
+            <td>Range: </td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>Damage Die:</td>
+            <td class="DamageDie__gun0">10</td>
+          </tr>
+          <tr>
+            <td>Gun_Accuracy_Mod:</td>
+            <td class="Gun_Accuracy_Mod__gun0 plus">2</td>
+          </tr>
+          <tr>
+            <td>Gun_Crit_Damage_Mod:</td>
+            <td class="Gun_Crit_Damage_Mod__gun0 plus">2</td>
+          </tr>
+          <tr>
+            <td>Range 3 = ACC +3</td>
+            <td><input type="checkbox" class="Gun_Accuracy_Mod__gun0_toggle" data-value="3" checked="">
+            </td>
+          </tr>
+          <tr>
+            <td class="hits_count_gun0" data-min="8" data-value="1">Add
+              1 hit at:
+            </td>
+            <td>
+              8
+            </td>
+          </tr>
+          <tr>
+            <td class="crits_count_gun0" data-min="16" data-value="1">
+              Add 1 crit at:
+            </td>
+            <td>
+              16
+            </td>
+          </tr>
+
+        </tbody>
+      </table>
+
+      <table class="gun_details">
+        <tbody>
+          <tr>
+            <td><strong>Synergy</strong></td>
+            <td>
+              <button class="accuracy_roller" data-gun="1">Roll</button>
+            </td>
+          </tr>
+          <tr>
+            <td colspan="2">From Alas!</td>
+          </tr>
+          <tr>
+            <td>Type:</td>
+            <td id="Gun_Type_gun1">Pistol</td>
+          </tr>
+          <tr>
+            <td>Favored:</td>
+            <td id="Is_Favored_Gun_Type__gun1">no</td>
+          </tr>
+          <tr>
+            <td>Range: </td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Damage Die:</td>
+            <td class="DamageDie__gun1">4</td>
+          </tr>
+          <tr>
+            <td>Damage Die:</td>
+            <td class="DamageDie__gun1">4</td>
+          </tr>
+          <tr>
+            <td>Gun_Damage_Mod:</td>
+            <td class="Gun_Damage_Mod__gun1 plus">1</td>
+          </tr>
+          <tr>
+            <td class="hits_count_gun1" data-min="2" data-value="1">Add 1 hit at:</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td class="hits_count_gun1" data-min="8" data-value="1">Add 1 hit at:</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td class="hits_count_gun1" data-min="16" data-value="1">Add 1 hit at:</td>
+            <td>16</td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
+
+    <h2>Melee Attack
+      <div class="h2small">
+        Damage:
+        <span id="Melee_Damage">0</span>
+      </div>
+    </h2>
+
+    <div class="cards1">
+      <table>
+        <tbody>
+          <tr>
+            <td>1d4</td>
+            <td><button class="melee_roller" data-value="4">Roll</button></td>
+          </tr>
+          <tr>
+            <td>Natural:</td>
+            <td id="Melee_Natural">0</td>
+          </tr>
+          <tr>
+            <td>
+              Mod:</td>
+            <td id="Melee_Mod" class="plus">1</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+-->
 
 
     <h2>Base Stats</h2>
@@ -32,12 +451,65 @@
       </template>
     </div>
 
+
+    <h2>Skill Points</h2>
+    <div class="cards1">
+      <template x-for="stat_name in $store.d.stat_names">
+        <table>
+          <tr>
+            <td x-text="stat_name"></td>
+            <td x-text="$store.d.raw_stats[stat_name].skill_points"></td>
+          </tr>
+        </table>
+      </template>
+    </div>
+
+    <h2>Archetype: Deadeye</h2>
+    <div class="cards1">
+      <template x-for="stat_name in $store.d.stat_names">
+        <table>
+          <tr>
+            <td x-text="stat_name"></td>
+            <td x-text="$store.d.raw_stats[stat_name].archetype"></td>
+          </tr>
+        </table>
+      </template>
+    </div>
+
+    <h2>Class: Hunter</h2>
+    <div class="cards1">
+      <template x-for="stat_name in $store.d.stat_names">
+        <table>
+          <tr>
+            <td x-text="stat_name"></td>
+            <td x-text="$store.d.raw_stats[stat_name].class"></td>
+          </tr>
+        </table>
+      </template>
+    </div>
+
   </main>
   <script>
     document.addEventListener('alpine:init', () => {
       Alpine.store('d', {
         name: "Rodger Hammerstein",
         level: 1,
+        movement: 3,
+        gold: 113,
+        ba_rank: 1,
+        ba_tokens: 0,
+        health: {
+          max: 14,
+          current: 14,
+          regen: 0
+        },
+        shields: {
+          max: 20,
+          current: 20,
+          regen: 5,
+          type: "Basic",
+          info: "Just a regular old shield that saves your ass"
+        },
         stat_names: ['Accuracy', 'Damage', 'Mastery', 'Speed'],
 
         raw_stats: {
@@ -52,15 +524,33 @@
             class: 2,
             skill_points: 0,
           },
+          Damage_Mod_Favored_Gun: {
+            caliber_level_1: 1
+          },
+          Insight_Checks: {
+            background: -2,
+          },
           Mastery: {
             archetype: 2,
             class: 1,
             skill_points: 0,
           },
+          Search_Checks: {
+            caliber_level_1: 1
+          },
           Speed: {
             archetype: 0,
             class: 0,
             skill_points: 0,
+          }
+        },
+
+        detail_checks: {
+          Guild_Sneak_Checks: {
+            Looter_Trait: 5
+          },
+          Loot_Search_Checks: {
+            Insider_Trait: 5
           }
         },
 
